# ramflux

./: .gitignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  LICENSING.md  MAINTAINERS.md  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  about-notice.hbs  about.toml  audit.toml  deny.toml
apps/ramflux-federation/: Cargo.toml
apps/ramflux-federation/src/: admin_http.rs  flow.rs  helpers.rs  itest_http.rs  main.rs  mesh.rs  state.rs
apps/ramflux-gateway/: Cargo.toml
apps/ramflux-gateway/src/: clients.rs  compio_gateway.rs  itest_http.rs  main.rs  object_issue.rs  quic_dispatch.rs  serve.rs  session.rs  state.rs
apps/ramflux-notify/: Cargo.toml
apps/ramflux-notify/src/: main.rs
apps/ramflux-relay/: Cargo.toml
apps/ramflux-relay/src/: main.rs
apps/ramflux-retention/: Cargo.toml
apps/ramflux-retention/src/: main.rs
apps/ramflux-router/: Cargo.toml
apps/ramflux-router/src/: glommio_mesh.rs  glommio_runtime.rs  handlers.rs  lifecycle.rs  main.rs  router_engine.rs  router_runtime.rs  serve.rs
apps/ramflux-signaling/: Cargo.toml
apps/ramflux-signaling/src/: main.rs
apps/rf/: Cargo.toml
apps/rf/src/: keychain.rs  main.rs  utils.rs
apps/rf/src/cli/: a2i_a2ui.rs  account.rs  admin.rs  call_bot.rs  contact.rs  daemon.rs  device.rs  dm.rs  grant.rs  group.rs  keychain.rs  mcp.rs  mod.rs  object.rs
apps/rf/src/handlers/: a2i.rs  a2ui.rs  account.rs  admin.rs  bot.rs  call.rs  contact.rs  daemon.rs  device.rs  dm.rs  grant.rs  group.rs  keychain.rs  mcp.rs  mod.rs  object.rs
crates/ramflux-core/: Cargo.toml
crates/ramflux-core/src/: lib.rs
crates/ramflux-crypto/: Cargo.toml
crates/ramflux-crypto/src/: double_ratchet.rs  error.rs  franking.rs  group_sender.rs  home_node_migration.rs  identity.rs  kdf.rs  key_verification.rs  lib.rs  prekey.rs  recovery.rs  signing.rs  x3dh.rs  zeroize_tests.rs
crates/ramflux-crypto/tests/: ed25519_batch.rs  ed25519_verify_bench.rs  generate_protocol_fixtures.rs  m1_3_crypto.rs
crates/ramflux-node-core/: Cargo.toml
crates/ramflux-node-core/src/: config.rs  error.rs  federation_crypto.rs  federation_delivery.rs  federation_state.rs  federation_store.rs  federation_types.rs  franking.rs  gateway_auth.rs  gateway_frames.rs  gateway_state.rs  home_node_migration.rs  http_support.rs  inbox.rs  lib.rs  lifecycle.rs  mesh_identity.rs  mvp1_registry.rs  notify.rs  notify_wal.rs  perf_metrics.rs  redb_store.rs  relay.rs  replay_guard.rs  retention.rs  router.rs  router_abuse.rs  router_lifecycle.rs  router_store.rs  router_wal.rs  service_signing.rs  session.rs  signaling.rs
crates/ramflux-node-core/src/tests/: config.rs  federation.rs  helpers.rs  lifecycle_retention_http.rs  mod.rs  notify.rs  routing.rs  signaling_gateway.rs  stores.rs
crates/ramflux-protocol/: Cargo.toml
crates/ramflux-protocol/fixtures/protocol/v1/a2i_control/: fixture.canonical  fixture.hash  fixture.sig  negative.invalid_signature.json  negative.replay.json
crates/ramflux-protocol/fixtures/protocol/v1/a2ui_surface/: fixture.canonical  fixture.hash  fixture.json  fixture.sig  negative.invalid_signature.json
crates/ramflux-protocol/fixtures/protocol/v1/ack/: fixture.canonical  fixture.hash  fixture.json  fixture.sig  negative.invalid_signature.json
crates/ramflux-protocol/fixtures/protocol/v1/bot_event/: fixture.canonical  fixture.hash  fixture.json  fixture.sig  negative.invalid_signature.json
crates/ramflux-protocol/fixtures/protocol/v1/bot_install_grant/: fixture.canonical  fixture.hash  fixture.sig  negative.invalid_signature.json  (+1 more)
crates/ramflux-protocol/src/: canonical_json.rs  core_types.rs  domain.rs  encoding.rs  error.rs  events.rs  fixtures.rs  header.rs  home_node_migration.rs  lib.rs  object_relay_v3.rs  protocol_object.rs  replay.rs  signature.rs  state.rs  surfaces.rs
crates/ramflux-protocol/tests/: m1_2_protocol.rs
crates/ramflux-sdk/: Cargo.toml  build.rs  cbindgen.toml
crates/ramflux-sdk/src/: constants.rs  dm.rs  error.rs  federation.rs  group.rs  itest_bus_fault.rs  itest_crash_seam.rs  itest_rfd_fault.rs  lib.rs  object.rs  own_device_sync.rs  prekey.rs  prelude.rs  records.rs  time.rs
crates/ramflux-sdk/src/bus/: client.rs  daemon.rs  io.rs  mod.rs  protocol.rs  state.rs
crates/ramflux-sdk/src/bus/dispatch/: a2i_a2ui.rs  account.rs  call_bot.rs  contact.rs  daemon.rs  device.rs  grant_mcp.rs  group.rs  message.rs  mod.rs  object.rs
crates/ramflux-sdk/src/c_abi/: mod.rs
crates/ramflux-sdk/src/client/: a2i.rs  account.rs  contact.rs  conversation.rs  dm.rs  dm_session.rs  federation.rs  group.rs  group_delivery.rs  group_session.rs  identity.rs  mcp_a2ui.rs  mod.rs  object.rs  own_device_sync.rs  recovery.rs  storage.rs
crates/ramflux-sdk/src/gateway/: engine.rs  helpers.rs  mod.rs  protocol.rs
crates/ramflux-sdk/tests/: c_abi_smoke.rs
crates/ramflux-storage/: .gitignore  Cargo.toml
crates/ramflux-storage/src/: account_index.rs  clock.rs  constants.rs  conversation_helpers.rs  encryption.rs  error.rs  event_store.rs  group_permissions.rs  history_hash.rs  lib.rs  row_mappers.rs  schema.rs  tests.rs
crates/ramflux-storage/src/account_db/: bot.rs  conversation_list.rs  conversation_projection.rs  conversation_state.rs  device_directory.rs  friend.rs  group_pending.rs  groups.rs  history.rs  identity_verification.rs  mcp.rs  messages.rs  mod.rs  object.rs  recovery.rs
crates/ramflux-storage/src/records/: account.rs  bot.rs  conversation.rs  device_directory.rs  friend.rs  group.rs  identity.rs  mcp.rs  message.rs  mod.rs  object.rs  recovery.rs
crates/ramflux-sync/: Cargo.toml
crates/ramflux-sync/src/: a2ui.rs  bot.rs  error.rs  federation.rs  franking_call.rs  gossip.rs  lib.rs  mcp.rs  object_store.rs
crates/ramflux-transport/: Cargo.toml
crates/ramflux-transport/examples/: relay_quic_bench.rs
crates/ramflux-transport/src/: backend.rs  compio_gateway.rs  compio_mesh.rs  error.rs  lib.rs  loopback.rs  mesh_http.rs  mesh_quic.rs  mesh_tls.rs  perf_metrics.rs  policy.rs  quic_gateway.rs  relay_quic_pool.rs  tls_config.rs  types.rs
(+141 files in other folders)
