[package]
name = "ramflux-federation"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.ramflux]
commercial-license = true

[features]
default = []
compio-mesh = ["dep:compio", "ramflux-transport/compio-mesh"]
itest-http = ["ramflux-node-core/itest-http"]

[target.'cfg(target_os = "linux")'.dependencies]
compio = { version = "=0.19.1", optional = true }

[dependencies]
anyhow = { workspace = true }
ramflux-core = { workspace = true }
ramflux-crypto = { workspace = true }
ramflux-node-core = { path = "../../crates/ramflux-node-core" }
ramflux-protocol = { workspace = true }
ramflux-transport = { workspace = true }
redb = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
