[package]
name = "ramflux-notify"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.ramflux]
commercial-license = true

[features]
default = []
compio-notify = ["dep:compio"]
itest-http = ["ramflux-node-core/itest-http"]

[target.'cfg(target_os = "linux")'.dependencies]
compio = { version = "=0.19.1", optional = true }

[dependencies]
anyhow = { workspace = true }
aes-gcm = { workspace = true }
bytes = { workspace = true }
h2 = { workspace = true }
hkdf = { workspace = true }
http = { workspace = true }
jsonwebtoken = { workspace = true }
p256 = { workspace = true }
ramflux-node-core = { workspace = true }
ramflux-protocol = { workspace = true }
ramflux-transport = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
webpki-roots = { workspace = true }

[dev-dependencies]
rcgen = { workspace = true }

[lints]
workspace = true
