[package]
name = "ramflux-router"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.ramflux]
commercial-license = true

[features]
default = []
glommio-runtime = ["dep:futures-lite", "dep:glommio", "dep:rustls", "dep:rustls-pemfile"]
itest-http = ["ramflux-node-core/itest-http"]

[dependencies]
anyhow = { workspace = true }
ramflux-core = { workspace = true }
ramflux-node-core = { workspace = true }
ramflux-protocol = { workspace = true }
ramflux-storage = { workspace = true }
ramflux-sync = { workspace = true }
ramflux-transport = { workspace = true }
redb = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
futures-lite = { workspace = true, optional = true }
glommio = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
rustls-pemfile = { workspace = true, optional = true }

[dev-dependencies]
ramflux-crypto = { workspace = true }

[lints]
workspace = true
