[package]
name = "ramflux-router"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.ramflux]
commercial-license = true

[features]
default = []
compio-mesh = ["dep:compio", "ramflux-transport/compio-mesh"]
itest-http = ["ramflux-node-core/itest-http"]

[target.'cfg(target_os = "linux")'.dependencies]
compio = { version = "=0.19.1", optional = true }

[dependencies]
anyhow = { workspace = true }
ramflux-node-core = { workspace = true }
ramflux-protocol = { workspace = true }
ramflux-transport = { workspace = true }
serde_json = { workspace = true }
socket2 = { version = "0.6", features = ["all"] }
tokio = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
ramflux-crypto = { workspace = true }

[lints]
workspace = true
