[package]
name = "ramflux-signaling"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.ramflux]
commercial-license = true

[features]
default = []
itest-http = ["ramflux-node-core/itest-http"]

[dependencies]
anyhow = { workspace = true }
ramflux-core = { workspace = true }
ramflux-node-core = { workspace = true }
ramflux-protocol = { workspace = true }
ramflux-transport = { workspace = true }
redb = { workspace = true }
stun = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
turn = { workspace = true }

[lints]
workspace = true
