[package]
name = "ramflux-signaling"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.ramflux]
commercial-license = true

[features]
default = []
itest-http = ["ramflux-node-core/itest-http"]

[dependencies]
anyhow = { workspace = true }
ramflux-node-core = { workspace = true }
stun = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
turn = { workspace = true }

[lints]
workspace = true
