[package]
name = "ramflux-rf"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license.workspace = true
repository = "https://github.com/ramflux/ramflux-rf"

[[bin]]
name = "rf"
path = "src/main.rs"

[features]
default = []
# T22-A1 / RQ-04: itest LocalMint compatibility. Propagates the SDK compile gate and re-admits the
# `--relay-service-key` object CLI flags. Never enabled by production rf binaries.
itest-local-mint = ["ramflux-sdk/itest-local-mint"]
# T24-B2: propagate the SDK rfd mid-flight crash-resume barrier gate. Never enabled by production rf.
itest-rfd-fault = ["ramflux-sdk/itest-rfd-fault"]

[dependencies]
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-crypto = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-sdk = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-sync = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
keyring = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt", "rt-multi-thread"] }
zeroize = "1.8"

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
