[package]
name = "ramflux-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "Apache-2.0"
repository = "https://github.com/ramflux/ramflux-core"

[dependencies]
arc-swap = "1.8.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"

[package.metadata.cargo-machete]
ignored = ["arc-swap", "parking_lot", "tracing", "uuid"]
