[package]
name = "ramflux-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license.workspace = true
repository = "https://github.com/ramflux/ramflux-core"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
