[package]
name = "ramflux-crypto"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "Apache-2.0"
repository = "https://github.com/ramflux/ramflux-crypto"

[dependencies]
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-core = { version = "0.1.0", path = "../ramflux-core" }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { version = "0.1.0", path = "../ramflux-protocol" }
argon2 = "0.5.3"
base64 = "0.22"
blake3 = "1.8.5"
chacha20poly1305 = "0.10.1"
constant_time_eq = "0.4"
ed25519-dalek = { version = "2.2.0", features = ["batch", "zeroize"] }
getrandom = "0.3"
hex = "0.4"
hkdf = "0.13.0"
hmac = "0.12"
rand = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = "0.8"
sha2 = "0.10"
subtle = "2.6"
thiserror = "2.0"
tracing = "0.1"
x25519-dalek = { version = "2.0.1", features = ["static_secrets", "zeroize"] }
zeroize = { version = "1.8", features = ["derive"] }

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"

[package.metadata.cargo-machete]
ignored = ["constant_time_eq", "hkdf", "rand", "subtle", "tracing"]
