[package]
name = "ramflux-node-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.ramflux]
commercial-license = true

[features]
default = []
itest-http = []

[dependencies]
arc-swap = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-crypto = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { workspace = true }
crc32fast = { workspace = true }
redb = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = { workspace = true }
postcard = { workspace = true }
sha2 = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true, features = ["rt", "sync"] }
toml = { workspace = true }

[lints]
workspace = true
