[package]
name = "ramflux-node-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.ramflux]
commercial-license = true

[features]
default = []
itest-http = []
# T23-A2b2b: the legacy single-pinned-provider-key trust envelope path
# (SignedFederatedIssuerTrustSnapshot v3 + verify_signed_federated_issuer_trust_snapshot +
# update_from_signed). Default-off: the production/default build uses the offline-root-signed
# provider-keyring path only. Enabled explicitly for the legacy compatibility itests.
itest-provider-single-key = []
# RELAY-MEM-03-A0b (CTRL-093) DIAGNOSTIC/probe-only (default-off): enables redb's `cache_metrics`
# and unlocks a fixed redb page-cache cap (via `RAMFLUX_RELAY_REDB_CACHE_BYTES`) + a `cache_stats`
# accessor for the 1 GiB-control-vs-32 MiB-candidate experiment. NEVER in the default/production
# build: without it `RelayRedbStore::open` reads no env, overrides nothing (redb's 1 GiB default),
# and exposes no cache-stats surface. Enabled explicitly for a probe run via run-realnet.sh.
itest-redb-cache-probe = ["redb/cache_metrics"]

[dependencies]
arc-swap = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-crypto = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { workspace = true }
crc32fast = { workspace = true }
redb = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hmac = { workspace = true }
postcard = { workspace = true }
sha2 = { workspace = true }
thiserror = "2.0"
tokio = { workspace = true, features = ["rt", "sync"] }
toml = { workspace = true }

[lints]
workspace = true
