[package]
name = "ramflux-protocol"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "Apache-2.0"
repository = "https://github.com/ramflux/ramflux-protocol"

[dependencies]
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-core = { path = "../ramflux-core" }
base64 = "0.22"
blake3 = "1.8.5"
ed25519-dalek = "2.2.0"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3.2"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
insta = "1.47.2"

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
