[package]
name = "ramflux-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license = "Apache-2.0"
repository = "https://github.com/ramflux/ramflux-sdk"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
c-abi = []

[dependencies]
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-core = { version = "0.1.0", path = "../ramflux-core" }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { version = "0.1.0", path = "../ramflux-protocol" }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-crypto = { version = "0.1.0", path = "../ramflux-crypto" }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-storage = { version = "0.1.0", path = "../ramflux-storage" }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-transport = { version = "0.1.0", path = "../ramflux-transport" }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-sync = { version = "0.1.0", path = "../ramflux-sync" }
aes-gcm = "0.10"
blake3 = "1.5"
rmcp = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.42", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tracing = "0.1"
zeroize = "1.8"

[build-dependencies]
cbindgen = "0.29.3"

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"

[package.metadata.cargo-machete]
ignored = ["cbindgen", "ramflux-core", "rmcp"]
