[package]
name = "ramflux-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license.workspace = true
repository = "https://github.com/ramflux/ramflux-sdk"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
c-abi = []

[dependencies]
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-core = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-crypto = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-storage = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-transport = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-sync = { workspace = true }
aes-gcm = "0.10"
blake3 = "1.5"
hmac = "0.12"
rmcp = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.42", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tracing = "0.1"
zeroize = "1.8"

[build-dependencies]
cbindgen = "0.29.3"

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
