[package]
name = "ramflux-sdk"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license.workspace = true
repository = "https://github.com/ramflux/ramflux-sdk"
build = "build.rs"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
c-abi = []
# Read-only introspection for realnet integration tests (T21-A2a / CTRL-028). Never enabled by
# production binaries; exposes recv-commit checkpoints/cursor as evidence, no control or mutation.
itest-fingerprint = []
# T22-A1 / RQ-04: legacy v2 shared-HMAC relay-token local minting. Compile-time gate for the itest
# LocalMint compatibility path; still requires the runtime opt-in env to activate (double gate).
# Never enabled by production binaries — default SDK/rf carry no HMAC mint code, service-key env, or
# LocalMint env. The v3 GatewayIssued path is unaffected.
itest-local-mint = ["dep:hmac", "dep:sha2"]
# T24-B2: rfd mid-flight crash-resume itest. Compile-time gate for a post-local-commit /
# pre-remote barrier seam used only by mvp_s63 to SIGKILL `rf daemon start` at a durable-commit
# boundary. Never enabled by production binaries — default SDK/rf carry no fault mode/marker env
# strings, symbols, or park code. Still requires the runtime opt-in env to arm (double gate).
itest-rfd-fault = []

[dependencies]
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-crypto = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-storage = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-transport = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-sync = { workspace = true }
aes-gcm = "0.10"
blake3 = "1.5"
# Only used by the itest-local-mint v2 HMAC relay-token minting path; optional so production
# SDK/rf binaries do not link the HMAC implementation.
hmac = { version = "0.12", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Only used (via hmac) by the itest-local-mint v2 relay-token minting path.
sha2 = { version = "0.10", optional = true }
thiserror = "2.0"
tokio = { version = "1.42", features = ["io-util", "macros", "net", "rt", "sync", "time"] }
tracing = "0.1"
zeroize = "1.8"

[build-dependencies]
cbindgen = "0.29.3"

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
