[package]
name = "ramflux-sync"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
license.workspace = true
repository = "https://github.com/ramflux/ramflux-sync"

[dependencies]
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-core = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-protocol = { workspace = true }
# path dep for local dev; switch to git tag dep when GitHub repos exist
ramflux-crypto = { workspace = true }
chacha20poly1305 = "0.11.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
# T25-A2 (OBJ-IPC-01): zeroize the prepared-but-not-installed object key so a failure before
# install leaves no plaintext key in freed memory. Same workspace crate already used by ramflux-crypto.
zeroize = { workspace = true }

[lints.rust]
warnings = "deny"
unsafe_code = "deny"

[lints.clippy]
all = "deny"
correctness = "deny"
suspicious = "deny"
complexity = "deny"
perf = "deny"
style = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
